class Stage {
    static readonly Size = 300;
}

export default Stage;
